--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -92,7 +92,7 @@
         <p class="ml-3 mt-3" name="sumText">รวม</p>
       </div>
       <div class="col-6 text-right" name="colSumPrice">
-        <p class="mr-3 mt-3" name="pSumPrice"> <span name="sumPrice">{{data.totalamount}}</span>
+        <p class="mr-3 mt-3" name="pSumPrice"> <span name="sumPrice">{{data.totalamount | number}}</span>
           <span name="textBaht">
             บาท</span>
         </p>
