--- a/src/app/pages/manage-member/manage-member.component.scss
+++ b/src/app/pages/manage-member/manage-member.component.scss
@@ -21,3 +21,7 @@
 .cuser-poiter{
     cursor: pointer;
 }
+::ng-deep .mat-tab-body-content {
+    height: 100%;
+    overflow-x: hidden !important;
+}
