--- a/src/app/modal/select-option/select-option.component.scss
+++ b/src/app/modal/select-option/select-option.component.scss
@@ -1,9 +1,9 @@
 .card-height {
-    height: 8vw !important;
+    height: 100px !important;
 }
 
 .icon {
-    font-size: 4vw !important;
+    font-size: 50px !important;
     color: #00ea00;
 }
 
