--- a/src/app/modal/modal-add-box/modal-add-box.component.scss
+++ b/src/app/modal/modal-add-box/modal-add-box.component.scss
@@ -15,3 +15,16 @@
 ::ng-deep.mat-form-field-infix {
     border-top-width: 0 !important;
 }
+
+::ng-deep.mat-dialog-container {
+    display: block;
+    padding: 24px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    overflow: auto;
+    outline: 0;
+    width: 100%;
+    height: 100%;
+    min-height: inherit;
+    max-height: inherit;
+}
