--- a/src/app/modal/select-option/select-option.component.html
+++ b/src/app/modal/select-option/select-option.component.html
@@ -52,7 +52,7 @@
             <mat-form-field name="mat-form-field-key-qty">
               <!-- <input class="font-input" matInput [(ngModel)]="qty" formControlName="secondCtrl" required> -->
               <input name="keyQty" matInput placeholder="กรุณากรอกจำนวนสินค้า" (ngModelChange)="addQty(l,$event)"
-                [value]="!optionProd.qty ? 1 : optionProd.qty" formControlName="secondCtrl">
+                [value]="!optionProd.qty ? 1 : optionProd.qty" formControlName="secondCtrl" type="number">
             </mat-form-field>
           </div>
           <div name="divColNotUseNow2" class="col-2 text-left">
