--- a/src/app/modal/select-option/select-option.component.scss
+++ b/src/app/modal/select-option/select-option.component.scss
@@ -47,3 +47,13 @@
 .false {
     color: red;
 }
+
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance:textfield;
+}
