--- a/src/app/pages/order-report-detail/order-report-detail.component.scss
+++ b/src/app/pages/order-report-detail/order-report-detail.component.scss
@@ -23,3 +23,10 @@
 .mg-Left {
     margin-left: 17px !important;
 }
+
+// .table td,
+// .table th {
+//     padding: .75rem;
+//     vertical-align: top;
+//     border-top: none;
+// }
