--- a/src/app/pages/order-report-detail/order-report-detail.component.scss
+++ b/src/app/pages/order-report-detail/order-report-detail.component.scss
@@ -24,6 +24,12 @@
     margin-left: 17px !important;
 }
 
+.text-epils {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 // .table td,
 // .table th {
 //     padding: .75rem;
