--- a/src/app/pages/admin-manage-team/admin-manage-team.component.html
+++ b/src/app/pages/admin-manage-team/admin-manage-team.component.html
@@ -29,7 +29,7 @@
           <span name="item.detail">{{item.detail}}</span>
         </div>
         <div class="col-3 mt-2 mb-2  text-center" name="colBtn">
-          <button mat-stroked-button class="mr-1 border-btn" color="accent" (click)="onApprove(item)"
+          <button mat-stroked-button class="mr-1 border-btn mb-1" color="accent" (click)="onApprove(item)"
             name="btnApprove">อนุมัติ</button>
           <button mat-stroked-button color="accent" (click)="onReject(item)" name="btnReject">ปฏิเสธ</button>
         </div>
