--- a/src/app/pages/monitor/monitor.component.html
+++ b/src/app/pages/monitor/monitor.component.html
@@ -19,7 +19,7 @@
               </div>
               <div class="col-12 col-xs-12 col-sm-12 col-md-3 d-block d-xs-block d-sm-none d-md-none"
                 name="colBtnWaitWithdrawal2">
-                <button mat-stroked-button color="accent" class="style-btn mt-2 full-width"
+                <button mat-stroked-button color="accent" class="style-btn full-width"
                   name="btnWithdrawalList2">รายการเบิก</button>
               </div>
               <div class="col-12 col-xs-12 col-sm-12 col-md-3 d-block d-xs-block d-sm-none d-md-none"
@@ -59,9 +59,9 @@
                 <h5 class="mb-0" name="item2.team.teamname">ชื่อทีม: {{item2.team.teamname}}</h5>
                 <h5 class="mb-0" name="item2.totalorderamount">รวมออเดอร์: {{item2.totalorderamount | number}}</h5>
               </div>
-              <div class="col-12 col-xs-12 col-sm-6 col-md-6 text-right d-none d-xs-none d-sm-block d-md-block"
+              <div class="col-12 col-xs-12 col-sm-6 col-md-6 text-right"
                 name="colBtnWaitPack">
-                <button mat-stroked-button color="accent" class="style-btn" name="btnPack"
+                <button mat-stroked-button color="accent" class="style-btn full-width" name="btnPack"
                   (click)="toWaitShipping(item2)">เเพ็คสินค้าเเล้ว</button>
               </div>
             </div>
@@ -127,9 +127,9 @@
                 <h5 class="mb-0" name="item3.team.teamname">ชื่อทีม: {{item3.team.teamname}}</h5>
                 <h5 class="mb-0" name="item3.team.totalorderamount">รวมออเดอร์: {{item3.totalorderamount | number}}</h5>
               </div>
-              <div class="col-12 col-xs-12 col-sm-6 col-md-6 text-right d-none d-xs-none d-sm-block d-md-block"
+              <div class="col-12 col-xs-12 col-sm-6 col-md-6 text-right"
                 name="colBtnWaitShipping">
-                <button mat-stroked-button color="accent" class="style-btn" name="btnShipping"
+                <button mat-stroked-button color="accent" class="style-btn full-width" name="btnShipping"
                   (click)="toComplete(item3)">จัดส่งเเล้ว</button>
               </div>
             </div>
