--- a/src/app/pages/monitor/monitor.component.html
+++ b/src/app/pages/monitor/monitor.component.html
@@ -35,7 +35,8 @@
                 <span style="display: block" name="textName">ชื่อผู้สั่ง:
                   <span class="mr-2" name="itm.customer.firstname">{{itm.customer.firstname}}</span>
                   <span name="itm.customer.lastname">{{itm.customer.lastname}}</span></span>
-                <span style="display: block" class="mb-2" name="itm.totalamount">รวม: {{itm.totalamount | number}}</span>
+                <span style="display: block" class="mb-2" name="itm.totalamount">รวม:
+                  {{itm.totalamount | number}}</span>
               </div>
             </div>
           </div>
@@ -59,8 +60,13 @@
                 <h5 class="mb-0" name="item2.team.teamname">ชื่อทีม: {{item2.team.teamname}}</h5>
                 <h5 class="mb-0" name="item2.totalorderamount">รวมออเดอร์: {{item2.totalorderamount | number}}</h5>
               </div>
-              <div class="col-12 col-xs-12 col-sm-6 col-md-6 text-right"
+              <div class="col-12 col-xs-12 col-sm-6 col-md-6 text-right d-none d-xs-none d-sm-block d-md-block"
                 name="colBtnWaitPack">
+                <button mat-stroked-button color="accent" class="style-btn" name="btnPack"
+                  (click)="toWaitShipping(item2)">เเพ็คสินค้าเเล้ว</button>
+              </div>
+              <div class="col-12 col-xs-12 col-sm-6 col-md-6 text-right d-block d-xs-block d-sm-none d-md-none"
+                name="colBtnWaitPack2">
                 <button mat-stroked-button color="accent" class="style-btn full-width" name="btnPack"
                   (click)="toWaitShipping(item2)">เเพ็คสินค้าเเล้ว</button>
               </div>
@@ -73,7 +79,8 @@
                   <span class="mr-2" name="itm2.customer.firstname">{{itm2.customer.firstname}}</span>
                   <span name="itm2.customer.lastname">{{itm2.customer.lastname}}</span>
                 </span>
-                <span style="display: block" class="mb-2" name="itm2.totalamount">รวม: {{itm2.totalamount | number}}</span>
+                <span style="display: block" class="mb-2" name="itm2.totalamount">รวม:
+                  {{itm2.totalamount | number}}</span>
                 <div class="border-top mt-2 min-label-height" *ngIf="itm2.labels.length > 0" name="divLabel">
                   <span style="display: block" class="mt-2 text-overflow" name="textTrackLabel">เลขที่พัสดุ:
                     {{itm2.labels[itm2.page ? itm2.page : 0].trackno}}</span>
@@ -127,7 +134,12 @@
                 <h5 class="mb-0" name="item3.team.teamname">ชื่อทีม: {{item3.team.teamname}}</h5>
                 <h5 class="mb-0" name="item3.team.totalorderamount">รวมออเดอร์: {{item3.totalorderamount | number}}</h5>
               </div>
-              <div class="col-12 col-xs-12 col-sm-6 col-md-6 text-right"
+              <div class="col-12 col-xs-12 col-sm-6 col-md-6 text-right d-none d-xs-none d-sm-block d-md-block"
+                name="colBtnWaitShipping">
+                <button mat-stroked-button color="accent" class="style-btn" name="btnShipping"
+                  (click)="toComplete(item3)">จัดส่งเเล้ว</button>
+              </div>
+              <div class="col-12 col-xs-12 col-sm-6 col-md-6 text-right d-block d-xs-block d-sm-none d-md-none"
                 name="colBtnWaitShipping">
                 <button mat-stroked-button color="accent" class="style-btn full-width" name="btnShipping"
                   (click)="toComplete(item3)">จัดส่งเเล้ว</button>
@@ -141,7 +153,8 @@
                   <span class="mr-2" name="itm3.customer.firstname">{{itm3.customer.firstname}}</span>
                   <span name="itm3.customer.lastname">{{itm3.customer.lastname}}</span>
                 </span>
-                <span style="display: block" class="mb-2" name="itm3.totalamount">รวม: {{itm3.totalamount | number}}</span>
+                <span style="display: block" class="mb-2" name="itm3.totalamount">รวม:
+                  {{itm3.totalamount | number}}</span>
                 <div class="border-top mt-2 min-label-height" *ngIf="itm3.labels.length > 0" name="divLabel2">
                   <span style="display: block" class="mt-2" name="textTrackLabel2" class="text-overflow">เลขที่พัสดุ:
                     {{itm3.labels[itm3.page ? itm3.page : 0].trackno}}
@@ -194,7 +207,8 @@
                   <span class="mr-2" name="itm4.customer.firstname">{{itm4.customer.firstname}}</span>
                   <span name="itm4.customer.lastname">{{itm4.customer.lastname}}</span>
                 </span>
-                <span style="display: block" class="mb-2" name="itm4.totalamount">รวม: {{itm4.totalamount | number}}</span>
+                <span style="display: block" class="mb-2" name="itm4.totalamount">รวม:
+                  {{itm4.totalamount | number}}</span>
                 <div class="border-top mt-2 min-label-height" *ngIf="itm4.labels.length > 0" name="divLabel3">
                   <span style="display: block" class="mt-2 text-overflow" name="textTrackLabel3">เลขที่พัสดุ:
                     {{itm4.labels[itm4.page ? itm4.page : 0].trackno}}
