--- a/src/app/modal/modal-confirms/modal-confirms.component.html
+++ b/src/app/modal/modal-confirms/modal-confirms.component.html
@@ -11,10 +11,12 @@
 </div>
 
 <div name="divRowbtn" class="row mt-3 mb-3">
-  <div name="divColButtonConfirm" class="col-6 text-left">
-    <button class="ml-4 border-btn" name="btnConfrim" mat-stroked-button color="accent" (click)="onClickOk()">ตกลง</button>
+  <div name="divColButtonCancel" class="col-6 text-left">
+    <button class="ml-4" name="btnCancel" mat-stroked-button color="accent" (click)="onClickCancel()">ยกเลิก</button>
   </div>
-  <div name="divColButtonCancel" class="col-6 text-right">
-    <button class="mr-4" name="btnCancel" mat-stroked-button color="accent" (click)="onClickCancel()">ยกเลิก</button>
+  <div name="divColButtonConfirm" class="col-6 text-right ">
+    <button class="mr-4 border-btn" name="btnConfrim" mat-stroked-button color="accent"
+      (click)="onClickOk()">ตกลง</button>
   </div>
+
 </div>
