--- a/src/app/pages/order-report-detail/order-report-detail.component.html
+++ b/src/app/pages/order-report-detail/order-report-detail.component.html
@@ -70,7 +70,7 @@
 
   </div>
 </div> -->
-<h3>ตารางรวมยอด</h3>
+<h3>ตารางสรุปยอดการเบิกสินค้า</h3>
 
 <div class="table-responsive" *ngIf="dataReport && dataReport.reportall">
   <table class="table">
@@ -109,7 +109,7 @@
   </table>
 </div>
 
-<h3>ตารางลูกค้า</h3>
+<h3>ตารางรายละเอียดการเบิกสินค้า</h3>
 
 <div class="table-responsive mt-4" *ngIf="dataReport && dataReport.reportDetail">
   <table class="table">
