--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -11,6 +11,11 @@
 <div class="row">
   <div class="col-12">
     <mat-nav-list class="pt-0" *ngIf="userAuth && userAuth.roles  && userAuth.roles.length > 0">
+      <a mat-list-item (click)="sidenavService.closeNav();"
+        *ngIf="userAuth.roles[0] === 'staff' || userAuth.roles[0] === 'owner' || userAuth.roles[0] === 'user'">
+        <img src="./../../../assets/images/man.png" class="img-list">
+        <span class="ml-3">บัญชีผู้ใช้</span>
+      </a>
       <a mat-list-item (click)="onOrderList();sidenavService.closeNav();"
         *ngIf="userAuth.roles[0] === 'staff' || userAuth.roles[0] === 'owner'">
         <img src="./../../../assets/images/shopping-bag.png" class="img-list">
@@ -26,7 +31,7 @@
         <span class="ml-3">ยอดรวมการขาย</span>
       </a> -->
       <a mat-list-item (click)="onMonitor();sidenavService.closeNav();"
-        *ngIf="userAuth.roles[0] === 'staff' || userAuth.roles[0] === 'owner' || userAuth.roles[0] === 'admin'">
+        *ngIf="userAuth.roles[0] === 'owner' || userAuth.roles[0] === 'admin'">
         <img src="./../../../assets/images/list.png" class="img-list">
         <span class="ml-3">จัดการรายการขาย</span>
       </a>
