--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -11,7 +11,7 @@
 <div class="row">
   <div class="col-12">
     <mat-nav-list class="pt-0" *ngIf="userAuth && userAuth.roles  && userAuth.roles.length > 0">
-      <a mat-list-item (click)="sidenavService.closeNav();"
+      <a mat-list-item (click)="onGetProfile();sidenavService.closeNav();"
         *ngIf="userAuth.roles[0] === 'staff' || userAuth.roles[0] === 'owner' || userAuth.roles[0] === 'user'">
         <img src="./../../../assets/images/man.png" class="img-list">
         <span class="ml-3">บัญชีผู้ใช้</span>
