--- a/src/app/modal/modal-address/modal-address.component.scss
+++ b/src/app/modal/modal-address/modal-address.component.scss
@@ -28,3 +28,16 @@
     background: #fff;
     padding: 0 10px !important;
 }
+
+::ng-deep.mat-dialog-container {
+    display: block;
+    padding: 24px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    overflow: auto;
+    outline: 0;
+    width: 100%;
+    height: 100%;
+    min-height: inherit;
+    max-height: inherit;
+}
