--- a/src/app/modal/modal-create-member/modal-create-member.component.scss
+++ b/src/app/modal/modal-create-member/modal-create-member.component.scss
@@ -33,7 +33,17 @@
 }
 
 ::ng-deep .mat-dialog-container {
-    overflow: hidden;
+
+    display: block;
+    padding: 24px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    overflow: auto;
+    outline: 0;
+    width: 100%;
+    height: 100%;
+    min-height: inherit;
+    max-height: inherit;
 }
 
 // .overflow-team {
