--- a/src/app/pages/order-list/order-list.component.scss
+++ b/src/app/pages/order-list/order-list.component.scss
@@ -55,6 +55,15 @@
     border-color: #ff4081;
 }
 
+.color-oder{
+    color: #ff4081 !important;
+}
+.color-price{
+    color: #06b31d  !important;
+}
+.mg-10{
+    margin: 10px !important;
+}
 .bg-white {
     background-color: white;
 }
